framec_tests/common/tests/negative/test_unterminated_py_single_quote.frm
@target python

system PyUnterminatedSingleQuote {
  actions:
    do_thing() {
      # Unterminated single-quoted string
      s = 'not closed
    }

  interface:
  machine:
    $S {
      e -> $S
    }
  domain:
}

